[gd_scene load_steps=4 format=2]

[ext_resource path="res://Imagens/—Pngtree—right arrow vector icon white_5249043.png" type="Texture" id=1]
[ext_resource path="res://Imagens/—Pngtree—right arrow glyph black icon_4071468 (1).png" type="Texture" id=2]
[ext_resource path="res://joystick.gd" type="Script" id=3]

[node name="joystick" type="Node2D"]
z_index = 1
script = ExtResource( 3 )

[node name="RIGHT" type="TouchScreenButton" parent="."]
position = Vector2( 552, 248 )
scale = Vector2( 0.1, 0.1 )
normal = ExtResource( 1 )
pressed = ExtResource( 2 )

[node name="UP" type="TouchScreenButton" parent="."]
position = Vector2( 464, 264 )
rotation = -1.5708
scale = Vector2( 0.1, 0.1 )
normal = ExtResource( 1 )
pressed = ExtResource( 2 )

[node name="LEFT" type="TouchScreenButton" parent="."]
position = Vector2( 480, 352 )
rotation = 3.14159
scale = Vector2( 0.1, 0.1 )
normal = ExtResource( 1 )
pressed = ExtResource( 2 )

[node name="DOWN" type="TouchScreenButton" parent="."]
position = Vector2( 568, 336 )
rotation = 1.5708
scale = Vector2( 0.1, 0.1 )
normal = ExtResource( 1 )
pressed = ExtResource( 2 )

[connection signal="pressed" from="RIGHT" to="." method="_on_RIGHT_pressed"]
[connection signal="released" from="RIGHT" to="." method="_on_RIGHT_released"]
[connection signal="pressed" from="UP" to="." method="_on_UP_pressed"]
[connection signal="released" from="UP" to="." method="_on_UP_released"]
[connection signal="pressed" from="LEFT" to="." method="_on_LEFT_pressed"]
[connection signal="released" from="LEFT" to="." method="_on_LEFT_released"]
[connection signal="pressed" from="DOWN" to="." method="_on_DOWN_pressed"]
[connection signal="released" from="DOWN" to="." method="_on_DOWN_released"]
